# seo-agent-crewai

./: README.md  pyproject.toml
src/seo_agent_crew/: crew.py  main.py
src/seo_agent_crew/config/: agents.yaml  tasks.yaml
