[project]
name = "seo_agent_crew"
version = "0.1.0"
description = "seo-agent-crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[google-genai,tools]==1.7.2",
]

[project.scripts]
seo_agent_crew = "seo_agent_crew.main:run"
run_crew = "seo_agent_crew.main:run"
train = "seo_agent_crew.main:train"
replay = "seo_agent_crew.main:replay"
test = "seo_agent_crew.main:test"
run_with_trigger = "seo_agent_crew.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
